# ChangeLog for x11-misc/xsel
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xsel/ChangeLog,v 1.15 2008/09/17 15:43:07 coldwind Exp $

  17 Sep 2008; Santiago M. Mola <coldwind@gentoo.org> -xsel-0.9.6.ebuild:
  Remove old version.

  17 Sep 2008; Brent Baude <ranger@gentoo.org> xsel-1.1.0.ebuild:
  keyworded ~arch for ppc64, bug 224413

  13 Sep 2008; nixnut <nixnut@gentoo.org> xsel-1.1.0.ebuild:
  Stable on ppc wrt bug 224413

  10 Sep 2008; Raúl Porcel <armin76@gentoo.org> xsel-1.1.0.ebuild:
  ia64/x86 stable wrt #224413

  08 Sep 2008; Ferris McCormick <fmccor@gentoo.org> xsel-1.1.0.ebuild:
  Add ~sparc, Bug #224413. Sparc has never been keyworded so we are not going
  stable.

  31 May 2008; Santiago M. Mola <coldwind@gentoo.org> xsel-1.1.0.ebuild:
  amd64 stable

*xsel-1.1.0 (28 Feb 2008)

  28 Feb 2008; Samuli Suominen <drac@gentoo.org> +xsel-1.1.0.ebuild:
  Version bump.

  04 Feb 2007; Steve Dibb <beandog@gentoo.org> xsel-0.9.6.ebuild:
  amd64 stable, bug 151899

  27 Oct 2006; Sven Wegener <swegener@gentoo.org> xsel-0.9.6.ebuild:
  Pass CFLAGS to emake.

  21 Oct 2006; David Shakaryan <omp@gentoo.org> xsel-0.9.6.ebuild:
  Remove monolithic X from dependencies and add IUSE.

  14 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> xsel-0.9.6.ebuild:
  Stable on ia64.

  13 Sep 2006; Aron Griffis <agriffis@gentoo.org> xsel-0.9.6.ebuild:
  Mark 0.9.6 ~ia64

  20 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; xsel-0.9.6.ebuild:
  Stable on x86/ppc.

  21 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; xsel-0.9.6.ebuild:
  Add missing keywords, this was previously built within app-shells/fish which
  is keyworded for ppc and amd64.

*xsel-0.9.6 (16 Mar 2006)

  16 Mar 2006; Krzysiek Pawlik <nelchael@gentoo.org> +xsel-0.9.6.ebuild,
  +metadata.xml:
  New package, requested in bug #55422.
