@@ -1,6 +1,6 @@
-DIST xsel-0.9.6.tar.gz 66209 RMD160 c03e813baee1a9f7c61671659307c236ec44e586 SHA1 0cdd1b29ace8867202d3bb3a35de34ec4fd351df SHA256 e4c2f9e38776627e2c502339e72c169e1a037ebb41bb147e5658f7abb2212f93
 DIST xsel-1.1.0.tar.gz 168598 RMD160 738c718bc2f818dd38741feac02ca6fa249ae958 SHA1 f87424a30ec8cac8b8976c6e7b034b80dfa19c41 SHA256 460ddb775b3e5900b903f0ff518baca902c1ad8f599d7ac58169360221366a09
-EBUILD xsel-0.9.6.ebuild 813 RMD160 fc42a4b8b42cc6c53e466b18b6bd96f25ef4aed9 SHA1 f5396a0ba59d3476842c303795cb768cc80593e2 SHA256 bc3fab623fb1682701fe01897b4179124b814f1a79a1c1e351b47056e7fe5d6a
+DIST xsel-1.2.0.tar.gz 169155 RMD160 53fc7fe06e4e4ebe3c47a3a97408876cd0c5faed SHA1 e48df89d7ce7e1256b0c7464393533a0c296eca1 SHA256 b927ce08dc82f4c30140223959b90cf65e1076f000ce95e520419ec32f5b141c
 EBUILD xsel-1.1.0.ebuild 862 RMD160 9828ec08004f9fd2dfe57935da1ba3b75d3db8c9 SHA1 c135d006f29b2a0eb61f672b859c11b8ff43b1ef SHA256 9d664969aba2bab46c50dac4b524589298ec5e0a7b1f1ba1c3fcac939baec459
-MISC ChangeLog 1892 RMD160 6b93496ed9cacc9eeeb76768fd76b8ed2119ec35 SHA1 06e087e0e1f6bd2404c9d1dfc07276d3c221fb56 SHA256 2b756836c13adfd0f6e8023e81d25189d845f9cb00219e2182b5ac8a501d54d6
+EBUILD xsel-1.2.0.ebuild 864 RMD160 63b7cea49d7e6976a1144f0ff7b6bb6c8da96a25 SHA1 033401995b526503ee3ff02226b553911992ccbd SHA256 f7950ffe4d5493ccff82276b8f5ecaa383821d6765daeebb9f23b7eabe94e527
+MISC ChangeLog 2009 RMD160 633c31b97188f5d0c8415427494e2a2524688c91 SHA1 60a62b4d85f960e8a6f2474b7150a4d7ae9a01fb SHA256 11afb7b7f03692772beccd2439f2a1d350d2c92eef1e545374418843ffdae694
 MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
